Add support for parentheses and decimal point in calculator

--- a/popup.html
+++ b/popup.html
@@ -21,6 +21,10 @@
         <button class="operator" value="-">-</button>
         <button class="operator" value="*">x</button>
         <button class="operator" value="/">/</button>
+        <button class="parenthes" id="open-parenthesis">(</button>
+        <button class="parenthes" id="close-parenthesis">)</button>
+        <button class="operator" value=".">.</button>
+
         <!-- //number 0 to 9  -->
         <button class="operand" value="0">0</button>
         <button class="operand" value="1">1</button>
