Add scientific operators and adjust width in popup.html and styles.css

--- a/popup.html
+++ b/popup.html
@@ -23,7 +23,18 @@
         <button class="operator" value="/">/</button>
         <button class="parenthes" id="open-parenthesis">(</button>
         <button class="parenthes" id="close-parenthesis">)</button>
-        <button class="operator" value=".">.</button>
+
+        <div></div>
+        <div></div>
+
+        <button class="scientific-operator" value="square">x²</button>
+        <button class="scientific-operator" value="cube">x³</button>
+        <button class="scientific-operator" value="sqrt">√x</button>
+        <button class="scientific-operator" value="log">log</button>
+        <button class="scientific-operator" value="sin">sin</button>
+        <button class="scientific-operator" value="cos">cos</button>
+        <button class="scientific-operator" value="tan">tan</button>
+        <button class="scientific-operator" value="exp">e^x</button>
 
         <!-- //number 0 to 9  -->
         <button class="operand" value="0">0</button>
@@ -36,19 +47,10 @@
         <button class="operand" value="7">7</button>
         <button class="operand" value="8">8</button>
         <button class="operand" value="9">9</button>
+        <button class="operator" value=".">.</button>
+        <button id="calculate">=</button>
 
         <button id="reset">C</button>
-        <button id="calculate">=</button>
-      </div>
-      <div id="scientific-keyboard">
-        <button class="scientific-operator" value="square">x²</button>
-        <button class="scientific-operator" value="cube">x³</button>
-        <button class="scientific-operator" value="sqrt">√x</button>
-        <button class="scientific-operator" value="log">log</button>
-        <button class="scientific-operator" value="sin">sin</button>
-        <button class="scientific-operator" value="cos">cos</button>
-        <button class="scientific-operator" value="tan">tan</button>
-        <button class="scientific-operator" value="exp">e^x</button>
       </div>
     </div>
     <script src="script.js"></script>
