Refactor popup.html and styles.css

--- a/popup.html
+++ b/popup.html
@@ -9,11 +9,12 @@
   </head>
   <body>
     <div id="container">
-      <input type="text" id="input" placeholder="0" disabled />
-      <div>
-        <button id="copy"><i class="fas fa-copy"></i></button>
-        <!-- Ajout de l'élément avec la classe CSS -->
-        <p id="copy-message" class="copy-message">Texte copié</p>
+      <div class="container-input">
+        <div class="contenant-copy">
+          <input type="text" id="input" placeholder="0" disabled />
+          <button id="copy"><i class="fas fa-copy"></i></button>
+          <p id="copy-message" class="copy-message">Texte copié</p>
+        </div>
       </div>
 
       <div id="keyboard">
